Avances de la pagina reservaciones Especiales

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,24 +1,1 @@
-<header class="header">
-  <div class="logo">
-    <h1>San Bartolo</h1>
-    <p>Restaurante</p>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="#">Inicio</a></li>
-      <li><a href="#">Menú</a></li>
-      <li><a href="#">Contacto</a></li>
-    </ul>
-  </nav>
-</header>
-
-<div class="hero">
-  <h1>Bienvenidos a Casa San Bartolo</h1>
-  <p>Disfruta de la mejor comida en un ambiente acogedor.</p>
-  <button class="btn-ver-menu">Ver Menú</button>
-</div>
-
-
-<footer class="footer">
-  <p>© 2025 Restaurante San Bartolo. Todos los derechos reservados.</p>
-</footer>
+<router-outlet></router-outlet>
