Cambuio rapido en el assets

--- a/Frontend/src/app/pages/special-reservations/special-reservations.component.html
+++ b/Frontend/src/app/pages/special-reservations/special-reservations.component.html
@@ -1,6 +1,6 @@
 <div class="special-reservations">
   <h1>Eventos Especiales</h1>
-  <img src="assets/Logo.png" alt="Logo del Restaurante" class="logo" width="150">
+  <img src="assets/icon.png" alt="Logo del Restaurante" class="logo" width="150">
 
  
   <div class="events">
